    * New JWSObjectJSON class for representing JWS secured objects serialisable
      to general or flattened JSON, with one or more signatures.
    * RemoteJWKSet can have its default HTTP timeouts and entity size limit
      overridden by setting the Java system properties
      com.nimbusds.jose.jwk.source.RemoteJWKSet.defaultHttpConnectTimeout,
      com.nimbusds.jose.jwk.source.RemoteJWKSet.defaultHttpReadTimeout and
      com.nimbusds.jose.jwk.source.RemoteJWKSet.defaultHttpSizeLimit (iss
      #453).
    * JSONObjectUtils.getJSONObject must accept java.util.Map values (iss
      #445).
    * JSONObjectUtils.getJSONObject verifies java.util.Map<String, Object> keys
      are String before cast.
    * Updates BouncyCastle to 1.70.
    * Upgrades to Google Tink 1.6.1.

version 9.16.1 (2022-01-25)
    * Updates RemoteJWKSet for efficient cache updates when the
      RemoteJWKSet.get method is called from multiple threads (iss #457).

version 9.17 (2022-01-30)
    * RemoteJWKSet allows an optional failover JWKSource.
    * Excludes com.google.protobuf:protobuf-java and com.google.code.gson:gson
      below com.google.crypto.tink:tink:1.6.1. These transitive dependencies
      are not required in the context of the Nimbus JOSE+JWT library and have
      recent reported vulnerabilities in the pulled versions.

version 9.18 (2022-01-30)
    * ThumbprintURI implements draft-ietf-oauth-jwk-thumbprint-uri-00.

version 9.19 (2022-02-07)
    * Updates KeyUse.from(X509Certificate) to return null when the certificate
      public key use doesn't map to a single JWK use value (iss #461).

version 9.20 (2022-02-21)
    * Upgrades ThumbprintURI to draft-ietf-oauth-jwk-thumbprint-uri-01.

version 9.21 (2022-03-07)
    * Prevent construction and parsing of JWS and JWE headers with non-public
      key in "jwk" parameter (iss #467).

version 9.21.1 (2022-04-21)
    * ECDSA.transcodeSignatureToDER must not throw unchecked exceptions (iss
      #473).
